fix(valkey): use ArrayList instead of List.of() for XStream compatibility
XStream cannot serialize java.util.CollSer (the serialization proxy
used by List.of()). Replace all List.of() usages with ArrayList to
ensure XStream can properly serialize ValkeyBlobStoreInfo.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: mihai.csaky@quarticle.ro <mihai.csaky@quarticle.ro>